# sinfun-chain

./: .gitignore  CHANGELOG.md  LICENSE  NOTES.md  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: demo-walkthrough.md  design.md  features.md  findings-solana.md
notebooks/: 01-holder-distribution.ipynb  02-exit-events-time.ipynb
scripts/: backfill_solana.py
src/sinfun/: cli.py  lifecycle.py  ml.py  report.py  storage.py
src/sinfun/chains/: base.py  base_chain.py  hyperliquid.py  solana.py  solana_metadata.py
src/sinfun/signals/: bundled_buys.py  concentration.py  dev_wallet.py  exit_liquidity.py  rug_features.py
tests/: test_concentration.py  test_lifecycle.py  test_ml.py  test_storage.py
