[project]
name = "sinfun-chain"
version = "0.1.0"
description = "Research toolkit for speculative DeFi (memecoins, perps, prediction markets)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Wei Han Tan" }]
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pyarrow>=14",
    "web3>=6.11",
    "click>=8.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
solana = ["solana>=0.32", "solders>=0.20"]

[project.scripts]
sinfun = "sinfun.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
